--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - pip install pytest-cov
   - pip install coveralls
 # command to run tests
-script: pytest --cov=citrus/
+script: pytest --cov=magnolia/
 after_success:
   - coveralls
 notifications:
